<resources>
    <string name="app_name">Chatting App</string>
    <string name="todo">todo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verify_your_phone_number">Verify Your Phone Number</string>
    <string name="please_enter_your_phone_number_for_verification">Please Enter Your Phone Number For Verification</string>
    <string name="phone_number">phone number</string>
    <string name="verify_number">Verify Number</string>
    <string name="enter_otp_code">Enter OTP Code</string>
    <string name="we_have_sent_you_an_otp_for_n_verification_phone_number">We have sent you an OTP for \n verification phone number</string>
    <string name="_236478">236478</string>
    <string name="verify_otp_code">Verify OTP Code</string>
    <string name="username">user name</string>
    <string name="hey_i_m_using_this_app">Hey! I,m using this app</string>
    <string name="done">Done</string>
    <string name="user_email">user email</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_email">enter email</string>
    <string name="enter_name">enter name</string>
    <string name="sign_in_with_phone_number">SignIn With Phone Number</string>
    <string name="mine">Mine</string>
    <string name="me">Me</string>
    <string name="profile">Profile</string>
    <string name="contact">Contact</string>
    <string name="chat">Chat</string>
    <string name="update">update</string>
    <string name="delete_account">Delete Account</string>
    <string name="enter_phone">enter phone</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
</resources>