<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDark"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.VerifyingNumberFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgVerifyNumber"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/ic_undraw_message_sent_1030"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/txtNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/enter_otp_code"
            android:textColor="@color/colorGreen"
            android:textSize="20sp"
            android:fontFamily="@font/glory_medium"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/we_have_sent_you_an_otp_for_n_verification_phone_number"
            android:textColor="@color/colorOrange"
            android:textSize="20sp"
            android:fontFamily="@font/glory_medium"
            android:textStyle="bold" />

        <com.chaos.view.PinView
            android:id="@+id/otpCodeText"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:cursorVisible="true"
            android:hint="@string/_236478"
            android:inputType="number"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/lightDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cursorColor="@color/purple_500"
            app:cursorWidth="2dp"
            app:hideLineWhenFilled="false"
            app:itemCount="6"
            app:itemHeight="48dp"
            app:itemRadius="4dp"
            app:itemSpacing="0dp"
            app:itemWidth="48dp"
            app:lineColor="@color/purple_200"
            app:lineWidth="2dp"
            app:viewType="rectangle" />

        <Button
            android:id="@+id/btnVerifyOtpCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/custom_button_shape"
            android:text="@string/verify_otp_code"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>