<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primaryDark"
    tools:context=".ui.fragment.ProfileFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/profile_ui_shape">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgUser"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher_background"
            app:civ_border_color="@color/lightDark"
            app:civ_border_width="2dp" />

        <ImageView
            android:id="@+id/imgPickImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="150dp"
            android:src="@drawable/ic_round_camera_alt_24"
            app:layout_anchor="@id/imgUser"
            app:layout_anchorGravity="end|center"
            app:tint="@color/white"
            android:contentDescription="@string/todo" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="225dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvUserName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_txt_input_shape2"
                android:hint="@string/username"
                android:inputType="text|textCapSentences"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/lightDark"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/glory_medium"
                android:importantForAutofill="no" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvUserEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_txt_input_shape2"
                android:hint="@string/user_email"
                android:inputType="text|textCapSentences"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/lightDark"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/glory_medium"
                android:importantForAutofill="no" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvUserPhoneNum"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_txt_input_shape2"
                android:hint="@string/enter_phone"
                android:inputType="text|textCapSentences"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/lightDark"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/glory_medium"
                android:importantForAutofill="no" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvUserStatus"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_txt_input_shape2"
                android:hint="@string/hey_i_m_using_this_app"
                android:inputType="text|textCapSentences"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/lightDark"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/glory_medium"
                android:importantForAutofill="no" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/btnUpdateProfileInfo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/card"
        android:layout_alignParentStart="true"
        android:layout_marginStart="80dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_round_edit_note_24"
        android:background="@drawable/custom_button_shape"
        android:contentDescription="@string/todo"
        app:tint="@color/white" />

    <ImageButton
        android:id="@+id/btnDeleteAccount"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/card"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/delete_account"
        app:backgroundTint="#D32F2F"
        android:background="@drawable/delete_button_shape"
        android:src="@drawable/ic_round_delete_24"
        app:tint="@color/white"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/todo" />


</RelativeLayout>