<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primaryDark"
    tools:context=".ui.fragment.GetUserPhoneNumber">

    <ImageButton
        android:id="@+id/btnBackToEmailLogin"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@color/primaryDark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_round_arrow_back_ios_new_24"
        app:tint="@color/white"
        android:contentDescription="@string/todo" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_conversation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="10dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/glory_medium"
            android:gravity="center"
            android:text="@string/verify_your_phone_number"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtVerify"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/glory_medium"
            android:gravity="center"
            android:text="@string/please_enter_your_phone_number_for_verification"
            android:textColor="@color/colorOrange"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/countryCodePicker"
                android:layout_width="120dp"
                android:layout_height="50dp"
                app:ccp_autoFormatNumber="true"
                app:ccp_contentColor="@color/white"
                app:ccp_countryPreference="PK"
                app:ccp_defaultPhoneCode="92"
                app:ccp_showFlag="false" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="@color/colorOrange" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:background="@drawable/custom_txt_input_shape"
                android:fontFamily="@font/quicksand_regular"
                android:gravity="center_vertical"
                android:hint="@string/phone_number"
                android:inputType="text"
                android:maxLength="10"
                android:paddingStart="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/lightDark"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnVerifyingPhoneNum"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/custom_button_shape"
        android:fontFamily="@font/glory_medium"
        android:text="@string/verify_number"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ProgressBar
        android:id="@+id/verProgressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:max="100"
        android:progress="10"
        android:secondaryProgress="25"
        android:visibility="gone"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>