<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primaryDark"
    tools:context=".ui.fragment.VerifyingWithEmailFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_conversation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="10dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pacifico"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="35sp" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvUserName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/custom_txt_input_shape"
                android:fontFamily="@font/quicksand_regular"
                android:gravity="center_vertical"
                android:hint="@string/enter_name"
                android:inputType="text"
                android:maxLength="10"
                android:paddingStart="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/lightDark"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvUserEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_txt_input_shape"
                android:fontFamily="@font/quicksand_regular"
                android:gravity="center_vertical"
                android:hint="@string/enter_email"
                android:inputType="text"
                android:maxLength="10"
                android:paddingStart="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/lightDark"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvUserPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/custom_txt_input_shape"
                android:fontFamily="@font/quicksand_regular"
                android:gravity="center_vertical"
                android:hint="enter password"
                android:inputType="text"
                android:maxLength="10"
                android:layout_marginTop="10dp"
                android:paddingStart="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/lightDark"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnGoToSignInNumber"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/custom_button_shape"
        android:fontFamily="@font/glory_medium"
        android:text="@string/verify_number"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/btnSignInWithEmail"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:id="@+id/btnSignInWithEmail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/custom_button_shape"
        android:fontFamily="@font/glory_medium"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <ProgressBar
        android:id="@+id/verProgressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:max="100"
        android:progress="10"
        android:secondaryProgress="25"
        android:visibility="gone"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>