<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parentView"
    tools:context=".ui.fragment.UpdateUserInfo"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/deleteDialog_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/update_dialog_shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Button
            android:id="@+id/btnUpdateStatusDialog"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/custom_button_shape"
            android:fontFamily="@font/glory_medium"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            />

        <Button
            android:id="@+id/btnExitStatusDialog"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/delete_button_shape"
            android:fontFamily="@font/glory_medium"
            android:text="@string/exit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="540dp"
            android:background="@drawable/delete_button_shape"
            android:contentDescription="@string/todo"
            android:outlineSpotShadowColor="@color/purple_500"
            android:padding="15dp"
            android:src="@drawable/ic_round_edit_note_24"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:tint="@color/white"
            tools:targetApi="p" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvUpdateUserName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:background="@drawable/custom_txt_input_shape"
            android:fontFamily="@font/glory_medium"
            android:text="@string/app_name"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvUpdateUserEmail"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:background="@drawable/custom_txt_input_shape"
            android:fontFamily="@font/glory_medium"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/tvUpdateUserName"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvUpdateUserPhone"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:background="@drawable/custom_txt_input_shape"
            android:fontFamily="@font/glory_medium"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/tvUpdateUserEmail"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvUpdateUserStatus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            android:background="@drawable/custom_txt_input_shape"
            android:fontFamily="@font/glory_medium"
            android:padding="8dp"
            android:gravity="start"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@id/btnExitStatusDialog"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/tvUpdateUserPhone" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>